--- a/src/index.html
+++ b/src/index.html
@@ -43,6 +43,10 @@
           </select>
         </div>
       </div>
+      <div class="d-flex align-items-center justify-content-center">
+        <button class="mt-5">Next</button>
+      </div>
     </div>
+    <script src="./script.js"></script>
   </body>
 </html>
