--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,11 @@
           <label for="question" class="form-label me-2 w-25 text-center"
             >What is troubling you today?</label
           >
-          <select class="form-select w-25" aria-label="Default select example">
+          <select
+            id="drop-down"
+            class="form-select w-25"
+            aria-label="Default select example"
+          >
             <option selected>Select an option</option>
             <option value="anxiety">Anxiety</option>
             <option value="depression">Depression</option>
@@ -44,7 +48,7 @@
         </div>
       </div>
       <div class="d-flex align-items-center justify-content-center">
-        <button class="mt-5">Next</button>
+        <button id="button" class="mt-5" disabled>Next</button>
       </div>
     </div>
     <script src="./script.js"></script>
