Added information page navigation

--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,14 @@
       <h1 class="ms-3">Mindful Me</h1>
     </div>
 
+    <div class="description">
+      <p>
+        Let's take a step toward a healthier mind together. We're here to
+        provide you with helpful information tailored just for you. Let's get
+        started!
+      </p>
+    </div>
+
     <div class="container mt-5">
       <div class="row mb-3">
         <div
